--- a/Client/package.json
+++ b/Client/package.json
@@ -15,16 +15,20 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^2.1.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.3",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
