--- a/Client/android/build.gradle
+++ b/Client/android/build.gradle
@@ -8,6 +8,10 @@ buildscript {
         kotlinVersion = "1.8.0"
     }
     repositories {
+         maven { url 'https://maven.google.com' }
+
+      
+      maven { url "https://www.jitpack.io" }
         google()
         mavenCentral()
     }
