--- a/Client/package.json
+++ b/Client/package.json
@@ -25,9 +25,12 @@
     "react-native-device-info": "^10.12.0",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "^2.14.1",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-picker": "^7.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
+    "react-native-permissions": "^4.1.1",
     "react-native-phone-call": "^1.2.0",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "^3.6.2",
